Update custom gem

--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -3,9 +3,11 @@
 one:
   title: MyString
   description: MyString
-  comment: one
+  user: one
+  #comment: one
 
 two:
   title: MyString
   description: MyString
-  comment: two
+  user: two
+  #comment: two
