--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,9 @@ development:
 test:
   <<: *default
   database: db/test.sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 3000
+
 
 production:
   <<: *default
