--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,13 +1,20 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyString
+  content: MyString1
   #created_by: MyString
   article: one
   user: one
 
 two:
-  content: MyString
+  content: MyString4
   #created_by: MyString
   article: two
   user: two
+
+
+three:
+  content: MyString3
+  #created_by: MyString
+  article: three
+  user: three
