--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -4,24 +4,25 @@
 one:
   firstname: Billy
   lastname: Mayer
-  address: 123 Dorset
-  medical_license: 165
+  address: 123 Dorset street
+  medical_license: 16545
   pps_num: MyPPs34
   user: one
+  user_id: one #Test to be deleted
 
 #profile_two:
 two:
   firstname: George
   lastname: Doen
   address: 44 Test street
-  medical_license: 2345
+  medical_license: 23454
   pps_num: MyString45
   user: two
 
 three:
   firstname: Jeorge
-  lastname: Den
-  address: 44 Test street
-  medical_license: 2345
+  lastname: Miller
+  address: 45 Test street
+  medical_license: 23454
   pps_num: MyString45
   user: three
