--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+   "engines": {
+   "node": "14.15.4",
+   "npm": "6.14.10"
+   }
 }
