--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "webpack-dev-server": "^3.11.2"
   },
    "engines": {
-   "node": "14.15.4",
+   "node": "16.x",
    "npm": "6.14.10"
    }
 }
