--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "chartkick": "^4.0.5",
     "turbolinks": "^5.2.0"
   },
+  "scripts": {
+   "start": "node index.js"
+},
+
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
