--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   },
   "scripts": {
    "start": "node index.js"
-},
+  },
 
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
   },
    "engines": {
-   "node": "16.x",
-   "npm": "6.14.10"
+   "node": "16.x"
    }
 }
